# rapid-crisis

./: .gitignore  README.md  crisis_analysis.md  deploy.sh  docker-compose.yml  package-lock.json  package.json
ai/: Dockerfile  fire_crisis_scene_base64_with_prefix.txt  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_aws.py  test_main.py  wrangler.toml
ai/src/: index.ts
auth-server/: Dockerfile  package-lock.json  package.json  tsconfig.json  wrangler.toml
auth-server/src/: index.ts
auth-server/src/config/: env.ts
auth-server/src/controller/: auth.controller.ts
auth-server/src/db/: mongo.ts  redis.ts
auth-server/src/middleware/: auth.middleware.ts  rate-limiters.ts
auth-server/src/models/: admin.model.ts  venue.model.ts
auth-server/src/routes/: auth.routes.ts
client/: Dockerfile  README.md  components.json  next.config.mjs  package-lock.json  package.json  tsconfig.json  wrangler.toml
client/app/: layout.tsx  page.tsx
client/lib/: hooks.ts  store.ts
docs/: ai-integration.md  api-reference.md  architecture.md  client-integration.md  system-design.md
iot-server/: Dockerfile  package-lock.json  package.json  tsconfig.json  wrangler.toml
iot-server/src/: index.ts
messaging-server/: package-lock.json  package.json
messaging-server/src/: index.ts
nginx/: default.conf
primary-server/: .env.example  Dockerfile  package-lock.json  package.json  wrangler.toml
primary-server/src/: index.ts
worker-server/: .env.example  Dockerfile  package-lock.json  package.json  wrangler.toml
worker-server/src/: index.ts
(+83 files in other folders)
