[project]
dependencies = [
    "bson>=0.5.10",
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "motor>=3.7.1",
    "pip>=26.0.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "redis>=7.4.0",
]
description = "Add your description here"
name = "ai"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"
